<resources>
    //Background music
    <string name="bg_music1">Путь к гармонии</string>
    <string name="bg_music2">Магия леса</string>
    <string name="bg_music3">Наполненная чаша</string>
    <string name="bg_music4">Чистое звучание</string>
    <string name="bg_music5">Единство бытия</string>
    <string name="bg_music6">Дождь и песнь ветра</string>
    <string name="bg_music7">Космический дух</string>
    <string name="bg_music8">Истинное познание</string>
    <string name="bg_music9">Ласточки над рекой</string>
    <string name="bg_music10">Летний дождь</string>
    <string name="bg_music11">Огонь Творения</string>
    <string name="bg_music12">Полное осознание</string>

    <string name="app_name">Mental Mind</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_home">Главная</string>
    <string name="menu_instruments">Инструменты</string>
    <string name="menu_create">Созидай</string>
    <string name="menu_profile">Профиль</string>
    <string name="affirmations">Аффирмации</string>

    <string name="enter_with_email">Войти с помощью Email</string>
    <string name="enter_with_google">Войти с помощью Google</string>
    <string name="enter_with_facebook">Войти с помощью Facebook</string>
    <string name="enter_with_vk">Войти с помощью VK</string>
    <string name="do_not_have_acc_do_registration">У вас нет аккаунта? <b>Зарегистрируйтесь</b></string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="next">Далее</string>
    <string name="reply_your_password">Повторите свой пароль</string>
    <string name="reply_password">Повторите пароль</string>
    <string name="enter_your_password">Введите свой пароль</string>
    <string name="enter_promocode">Введите промокод</string>
    <string name="password">Пароль</string>
    <string name="create_new_pass">Придумайте новый пароль</string>
    <string name="reply_new_pass">Повторите новый пароль</string>
    <string name="enter_your_email">Введите свой E-mail</string>
    <string name="email">Электронная почта</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="pass_recovery_description">Введите адрес электронной почты, и мы отправим Вам ссылку для восстановления доступа к аккаунту</string>
    <string name="what_are_you_now">Что беспокоит?</string>
    <string name="main">Главная</string>

    //OnBoardingText
    <string name="ob_first_main_text">Освободи свой мозг от всех ограничений</string>
    <string name="ob_first_secondary_text">С помощью простых и уникальных инструментов</string>
    <string name="ob_second_main_text">Ценная проработка для повышения качества жизни на каждый день</string>
    <string name="ob_second_secondary_text">Три минуты вернут тебя в потоковое состояние</string>
    <string name="ob_third_main_text">Позволь удивительным\nпеременам войти в твою жизнь</string>
    <string name="ob_third_secondary_text">Сделай правильный выбор, начни использовать приложение уже сейчас!</string>
    <string name="new_ob_third_main_text">Попробуй 3 дня бесплатно</string>
    <string name="new_ob_third_secondary_text">После регистрации тебе будут доступны все медитации</string>
    <string name="txt_login">Логин</string>

    <string name="txt_faq">FAQ</string>
    <string name="txt_help">Помощь</string>
    <string name="txt_change_language">Сменить язык</string>
    <string name="txt_add_promocode">Ввести промо-код</string>
    <string name="txt_promocode">Промокод</string>
    <string name="txt_notify_meditation">Напоминать о медитации</string>
    <string name="txt_level">Твой уровень</string>
    <string name="we_recommend_you">Мы рекомендуем вам</string>
    <string name="online_education">Онлайн обучение</string>
    <string name="online_meditate">Сейчас \nслушают медитации</string>
    <string name="stream_of_live">Поток жизни</string>
    <string name="favorite">Любимое</string>
    <string name="what_do_you_feel">Какой ты сейчас</string>
    <string name="will_be_available_later">Функционал будет доступен позже</string>
    <string name="minute">мин.</string>
    <string name="background_music">Фоновая музыка</string>
    <string name="speaker_voice">Голос диктора</string>
    <string name="on_way_to_you">на пути к себе</string>
    <string name="history">История</string>
    <string name="txt_fav_meditations">Мои любимые медитации</string>
    <string name="unblock_opportunities">Разблокируй безграничные возможности себя и приложения</string>
    <string name="txt_buy_subscription">Купить подписку</string>
    <string name="mentalmind_kz">mentalmind.kz</string>
    <string name="levels_description">Описание уровней</string>
    <string name="settings">Настройки</string>
    <string name="txt_name">Имя</string>
    <string name="enter_name">Введите имя</string>
    <string name="txt_birth_date">Дата рождения</string>
    <string name="enter_birth_date">ДД.ММ.ГГГГ</string>
    <string name="choose_from_list">Выберите из списка</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="change_password">Сменить пароль</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="save_password">Сохранить пароль</string>
    <string name="enter_current_password">Введите текущий пароль</string>
    <string name="what_is_mentalmind">Что такое "Mentalmind"?</string>

    <string name="mentalmind_description">Это приложение для ежедневного раскрытия безграничного потенциала мозга. Приложение - это целая система «перепрошивки» старых разрушительных убеждений на новые - созидательные. </string>
    <string name="about_instruments">Это авторские голосовые аудио записи, раскрывающие человеческий потенциал во всех сферах жизни.</string>
    <string name="about_how_long">Это приложение для ежедневного раскрытия безграничного потенциала мозга. Приложение - это целая система «перепрошивки» старых разрушительных убеждений на новые - созидательные. </string>
    <string name="about_result">Результатом использования приложения послужит отсутствие деструктивных эмоций. Вы будете ощущать чувство гармонии, наполненности и счастья.</string>
    <string name="what_is_instruments">Что такое Инструменты в  приложении?</string>
    <string name="how_long">Как долго я должен слушать  инструменты?</string>
    <string name="how_to_know">Как я пойму что приложение мне  подходит?</string>
    <string name="promocode_description">Если у Вас есть промокод, введите его ниже, чтобы получить доступ к полному функционалу приложения</string>
    <string name="write_to_us">Если у Вас позникли вопросы, жалобы или пожелания напишите нам</string>
    <string name="enter_text">Введите текст</string>
    <string name="txt_send">Отправить</string>
    <string name="txt_apply">Применить</string>
    <string name="russian_language">Русский язык</string>
    <string name="kazakh_language">Казахский язык</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="show_history_by_day">Посмотреть по дням</string>
    <string name="self_education">самопознание</string>
    <string name="txt_pass_reset">Восстановление пароля</string>
    <string name="trial_version_title">Попробуй 3 дня бесплатно</string>
    <string name="trial_first_condition">Бесплатная пробная версия</string>
    <string name="trial_second_condition">Неограниченный доступ ко всем инструментам на выбранный период для вашего развития и роста</string>
    <string name="trial_third_condition">Ежедневные рекомендации для повышения уровня жизни и благосостоянияЕжедневные рекомендации для повышения уровня жизни и благосостояния</string>
    <string name="try_now">Попробовать</string>
    <string name="privacy_policy"><u>Политика конфеденциальности</u></string>
    <string name="unblock_title">Разблокируй безграничные возможности себя и приложения Mentalmind</string>
    <string name="google_token">119718842009-dn727hgovj7nra2jibiinbt0p6f95mpo.apps.googleusercontent.com</string>
    <string name="facebook_app_id">3564330413611439</string>
    <string name="fb_login_protocol_scheme">fb3564330413611439</string>
    <integer name="com_vk_sdk_AppId">7630107</integer>
    <string name="pusher_beam_instance_id">dd756f1c-7882-41cf-8ebd-7fc29105ae95</string>
    <string name="pusher_beam_interest_ru">COMMON_RU</string>
    <string name="pusher_beam_interest_kz">COMMON_KZ</string>
    <string name="pusher_beam_interest_en">COMMON_EN</string>
    <string name="empty_history">История пуста</string>
    <string name="rate_meditation">Оцените медитацию</string>
    <string name="ft_cost">3 249 ₸</string>
    <string name="tenge_symbol">₸</string>
    <string name="ft_description">Доступ ко всем\n медитациям\n на целый месяц</string>
    <string name="ft_secondary_description">Новые аффирмации\n каждый день</string>
    <string name="ft_duration">1 месяц</string>
    <string name="buy">Купить</string>
    <string name="st_cost">33 216 ₸</string>
    <string name="st_description">+ 1 месяц доступа в\n подарок</string>
    <string name="st_secondary_description">Доступ ко всем\n медитациям\n на целый год</string>
    <string name="st_duration">1 год + 1 месяц</string>
    <string name="warning">Предупреждение</string>
    <string name="okay">Ок</string>

    <string name="http_403_message">Неправильный логин и пароль</string>
    <string name="http_400_message">Ошибка. Повторите позже</string>
    <string name="daily_challenge">Ежедневный челлендж</string>
    <string name="policy_agreement"><u>Договор</u> мною прочитан, понятен, согласен</string>
    <string name="go_to_tariffs">Перейти к тарифам</string>

    <string name="tariffs_first_desc">Неограниченный доступ к более, чем 200+ инструментам для вашего развития и роста</string>
    <string name="tariffs_second_desc">Система ежедневного встраивания сверхчеловеческой продуктивности</string>

    <string name="every_day">Каждый день</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

</resources>