<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.settings.FaqFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="76dp"
                android:src="@drawable/ic_back_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/RegularTextSize20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="76dp"
                android:text="@string/txt_faq"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/about"
                    style="@style/StandartTextSize16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_mentalmind"
                    app:drawableEndCompat="@drawable/ic_array_down" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutDescription"
                    style="@style/SmallRegularTextSize14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/mentalmind_description"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/whatIsInstruments"
                    style="@style/StandartTextSize16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/what_is_instruments"
                    app:drawableEndCompat="@drawable/ic_array_down" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutInstruments"
                    style="@style/SmallRegularTextSize14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_instruments"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/howLong"
                    style="@style/StandartTextSize16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/how_long"
                    app:drawableEndCompat="@drawable/ic_array_down" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutHowLong"
                    style="@style/SmallRegularTextSize14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_how_long"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/whatResult"
                    style="@style/StandartTextSize16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/how_to_know"
                    app:drawableEndCompat="@drawable/ic_array_down" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aboutResult"
                    style="@style/SmallRegularTextSize14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/about_result"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>