<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="76dp"
            android:src="@drawable/ic_back_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/RegularTextSize20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="76dp"
            android:text="@string/settings"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallRegularTextSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_stroke"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallRegularTextSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/txt_birth_date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_stroke"
                android:hint="@string/enter_birth_date"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallRegularTextSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/country" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_stroke"
                android:hint="@string/choose_from_list"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallRegularTextSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/city" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_stroke"
                android:hint="@string/choose_from_list"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingTop="14dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:background="@drawable/bg_green_button"
                android:drawableEnd="@drawable/ic_array_right_white"
                android:gravity="start|center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="17dp"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="52dp"
            android:background="@drawable/bg_blue_button"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>